--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -59,7 +59,7 @@ jobs:
           PyYAML==5.1.2
 
       - name: "Install BuildingsPy"
-        run: pip3 install git+https://github.com/lbl-srg/BuildingsPy@master
+        run: pip3 install git+https://github.com/lbl-srg/BuildingsPy@1b4308545bc793718c2c7b5b25a3f0f9df12588e
 
       - name: "Test html syntax"
         run : python ../bin/runUnitTests.py --validate-html-only
