--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -27,36 +27,17 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      # Checks-out repository under $GITHUB_WORKSPACE, so job can access it
+      - name: Checkout code
+        uses: nschloe/action-cached-lfs-checkout@v1
 
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.6' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+          python-version: '3.8.10' # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
 
       - name: "Install pip"
-        run: pip3 install --upgrade pip setuptools wheel
-
-      - name: "Install sphinx and its dependencies"
-        run: pip3 install \
-          sphinx==2.1.2 \
-          sphinx-bootstrap-theme==0.8.0 \
-          sphinxcontrib-bibtex==0.4.2 \
-          sphinxcontrib-plantuml==0.17 \
-          alabaster==0.7.12 \
-          MarkupSafe==1.1.1 \
-          Pygments==2.4.2 \
-          snowballstemmer==1.9.0 \
-          docutils==0.15.2 \
-          Babel==2.7.0 \
-          requests==2.22.0 \
-          Jinja2==2.10.1 \
-          latexcodec==1.0.7 \
-          pybtex==0.22.2 \
-          pybtex-docutils==0.2.1 \
-          oset==0.1.3 \
-          PyYAML==5.1.2
+        run: pip3 install --upgrade pip wheel
 
       - name: "Install BuildingsPy"
         run: pip3 install git+https://github.com/lbl-srg/BuildingsPy@1b4308545bc793718c2c7b5b25a3f0f9df12588e
